--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "author": "krishna mani",
   "license": "ISC",
   "bin": {
-   "blog-gen": "./index.js"
- },
+    "blog-gen": "./index.js"
+  },
   "devDependencies": {
     "eslint": "^5.1.0"
+  },
+  "dependencies": {
+    "colors": "^1.3.1",
+    "commander": "^2.16.0",
+    "js-beautify": "^1.7.5",
+    "showdown": "^1.8.6",
+    "yargs": "^12.0.1"
   }
 }
