--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"target" : "/Users/Krishna/kmani.me/index.html",
-	"template" : "/Users/Krishna/kmani.me/template.html",
-	"post_list_filename" : "/Users/Krishna/kmani.me/all.html",
-	"posts_folder" : "/posts/"
+	"target" : "",
+	"template" : "",
+	"post_list_filename" : "",
+	"posts_folder" : ""
 }
 
