--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "colors": "^1.3.1",
     "commander": "^2.16.0",
     "js-beautify": "^1.7.5",
-    "showdown": "^1.8.6",
-    "yargs": "^12.0.1"
-  }
+    "showdown": "^1.8.6"
+	}
 }
